# ProjectAtlas

./: .gitattributes  .gitignore  .purpose  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.agents/plugins/: marketplace.json
.codex/: .purpose
.codex/rules/: .purpose
.codex/rules/memory/: .purpose  activeContext.md  productContext.md  progress.md  projectbrief.md  ruleIndex.md  systemPatterns.md  techContext.md
.codex/rules/projectatlas/: .purpose  github-rules.md
.codex/skills/: .purpose  ProjectAtlas.md
.githooks/: .purpose  commit-msg  pre-push
.github/: .purpose  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  improvement_request.yml
.github/scripts/: release-notes.py
.github/workflows/: .purpose  03-auto-release.yml  04-docs.yml  ci.yml  release.yml
.projectatlas/: atlas.toon  config.toml  manual-files.toon  projectatlas-manual-files.toon  projectatlas-nonsource-files.toon  projectatlas-purpose-review.json  projectatlas.toon
adoption/: index.html
agent-integration/: index.html
api/: index.html
concepts/: index.html
configuration/: index.html
crates/projectatlas-cli/: Cargo.toml
crates/projectatlas-cli/src/: atlas_map.rs  main.rs  mcp.rs  runtime.rs  structural.rs  token_tui.rs
crates/projectatlas-cli/tests/: e2e.rs  lint_diagnostics.rs
crates/projectatlas-core/: Cargo.toml
crates/projectatlas-core/src/: health.rs  language.rs  lib.rs  outline.rs  query.rs  symbols.rs  telemetry.rs  toon.rs
crates/projectatlas-db/: Cargo.toml
crates/projectatlas-db/src/: lib.rs
crates/projectatlas-fs/: Cargo.toml
crates/projectatlas-fs/src/: lib.rs
crates/projectatlas-service/: Cargo.toml
crates/projectatlas-service/src/: import_aliases.rs  lib.rs
crates/projectatlas-symbols/: Cargo.toml
crates/projectatlas-symbols/src/: lib.rs
crates/projectatlas-symbols/src/languages/: c_family.rs  gradle.rs  kotlin.rs  mod.rs  objective_c.rs  zig.rs
docs/: .purpose  adoption.md  agent-integration.md  api.md  concepts.md  configuration.md  format.md  index.md  memory-bank-extension.md  projectatlas-3-architecture.md  projectatlas-3-v0.3.2-hardening-spec.md  structural-summaries.md  workflow.md
docs/benchmarks/: large-application-token-savings.md  swipinggale-token-savings.md
examples/: .purpose
fixtures/languages/: README.md  baselines.toon
fixtures/languages/c/: header.h  runner.c
fixtures/languages/cpp/: runner.cpp  runner.hpp
fixtures/languages/csharp/: Runner.cs
fixtures/languages/css/: tokens.css
fixtures/languages/go/: service.go
fixtures/languages/groovy/: build.gradle
fixtures/languages/html/: index.html
fixtures/languages/java/: AtlasService.java
fixtures/languages/javascript/: service.js
fixtures/languages/json/: package.json
fixtures/languages/kotlin/: Runner.kt  build.gradle.kts
fixtures/languages/markdown/: readme.md
fixtures/languages/objective-c/: UserManager.m
fixtures/languages/rust/: empty.rs  lib.rs
fixtures/languages/toml/: Cargo.toml
fixtures/languages/toon/: projectatlas-nonsource-files.toon
fixtures/languages/typescript/: component.tsx  service.ts
fixtures/languages/vue/: DealStage.vue  ProductPanel.vue
fixtures/languages/yaml/: workflow.yml
fixtures/languages/zig/: runner.zig
format/: index.html
plugins/projectatlas/: .mcp.json
plugins/projectatlas/.claude-plugin/: plugin.json
plugins/projectatlas/.codex-plugin/: plugin.json
plugins/projectatlas/opencode/: opencode.json
plugins/projectatlas/scripts/: install-runtime.ps1  install-runtime.sh
plugins/projectatlas/skills/projectatlas/: SKILL.md
scripts/: .purpose  check_all.py  check_commit_issue.py  check_docstrings.py  check_pr_issue_reference.py  generate_api_docs.py  install_hooks.py  next_version.py  prepare_release.py  verify_version.py
search/: search_index.json
skills/: .purpose
skills/claude/: .purpose  ProjectAtlas.md
skills/codex/: .purpose  ProjectAtlas.md
src/: .purpose
src/projectatlas/: .purpose  __init__.py  __main__.py  atlas.py  cli.py  config.py  models.py  output.py
templates/: .purpose  AGENTS.md
tests/: .purpose  test_atlas.py  test_commit_issue.py  test_docstrings.py  test_language_detection.py  test_next_version.py  test_pr_issue_reference.py  test_prepare_release.py
workflow/: index.html
