[project]
name = "projectatlas"
version = "0.1.4.dev0"
description = "Agent-first project map + health index — one-line purpose for every file and folder."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ProjectAtlas Contributors" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/styler-ai/ProjectAtlas"
Repository = "https://github.com/styler-ai/ProjectAtlas"
Issues = "https://github.com/styler-ai/ProjectAtlas/issues"

[project.scripts]
projectatlas = "projectatlas.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
